# 4SWU00

./: .clang-format  .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
bluetooth/: sdkconfig
bluetooth/main/: esp_eddystone_protocol.h
highlevel/: beacon_hashtable.c  beacon_hashtable.h  tile_room_mapping.c  tile_room_mapping.h
light/HA_on_off_light/main/: CMakeLists.txt
light/HA_on_off_switch/: sdkconfig.old
light/HA_on_off_switch/main/: CMakeLists.txt  switch_driver.h
main/: CMakeLists.txt  esp_eddystone_api.c  esp_eddystone_api.h  esp_eddystone_demo.c  idf_component.yml  main.c  monitor.c  tile.c
main/data_structures/: beacon_hashtable.c  beacon_hashtable.h  tile_room_mapping.c  tile_room_mapping.h
main/eddystone/: eddystone_impl.c  eddystone_impl.h  esp_eddystone_api.c  esp_eddystone_protocol.h
main/highlevel/: beacon_hashtable.c  beacon_hashtable.h  tile_room_mapping.c  tile_room_mapping.h
main/visualization/: map.py
main/zigbee/: beacon_data_handle.c  beacon_data_handle.h  esp_zb_coordinator.c  esp_zb_coordinator.h  esp_zb_end_device.c  esp_zb_end_device.h
zigbee-coordinator/: sdkconfig  sdkconfig.old
zigbee-end-device/: sdkconfig  sdkconfig.old
zigbee/coordinator/: partitions.csv  sdkconfig
zigbee/coordinator/main/: CMakeLists.txt  esp_zb_coordinator.c  esp_zb_coordinator.h  idf_component.yml  network_flow_driver.c
zigbee/end_device/: sdkconfig
zigbee/end_device/main/: CMakeLists.txt  esp_zb_end_device.c  esp_zb_end_device.h  network_flow_driver.c  network_flow_driver.h
(+4 files in other folders)
